correct align

--- a/src/components/Articles/ImgArticle/ImgArticle.module.scss
+++ b/src/components/Articles/ImgArticle/ImgArticle.module.scss
@@ -16,4 +16,7 @@
       margin-bottom: $base-spacing;
     }
   }
+  .imgContainer{
+    text-align: right;
+  }
 }
